--- a/Monitoring/Grafana/manifests/grafana.yaml
+++ b/Monitoring/Grafana/manifests/grafana.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: grafana-proxy-can-create-token-reviews
+  name: observability-grafana-proxy-can-create-token-reviews
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -10,12 +10,12 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: grafana-oauth-sa
-    namespace: camel-k-integrations
+    namespace: observability
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: grafana-can-view-cluster-monitoring
+  name: observability-grafana-can-view-cluster-monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -23,7 +23,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: grafana-oauth-sa
-    namespace: camel-k-integrations
+    namespace: observability
 ---
 apiVersion: v1
 kind: Secret
