--- a/Monitoring/Grafana/manifests/camel-integration-microprofilemetrics_grafanadashboard.yaml
+++ b/Monitoring/Grafana/manifests/camel-integration-microprofilemetrics_grafanadashboard.yaml
@@ -60,8 +60,9 @@ spec:
               "mappings": [
                 {
                   "options": {
-                    "match": "null",
+                    "match": "null+nan",
                     "result": {
+                      "color": "text",
                       "index": 0,
                       "text": "N/A"
                     }
@@ -140,8 +141,9 @@ spec:
               "mappings": [
                 {
                   "options": {
-                    "match": "null",
+                    "match": "null+nan",
                     "result": {
+                      "color": "text",
                       "index": 0,
                       "text": "N/A"
                     }
